--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8"/>
         <title> GIT</title>
-        <link rel="stylesheet" href="estilos.css"/>
+        <link rel="stylesheet" href="estilo.css"/>
     </head>
     <header>
         <h1><strong>Welcome to my first GIT project</strong></h1>
-        <h2>Mi repositorio, primero commit</h2>
+        <h2>Mi repositorio, primer commit</h2>
+        <h3>Segundo commit</h3>
         
     </header>
